kube-clusters/rancher-cluster/rancher/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rancher
  namespace: cattle-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.rancher.local.mvd.sh`)
      kind: Rule
      services:
        - name: rancher
          port: 80
    - match: Host(`rancher.local.mvd.sh`)
      kind: Rule
      services:
        - name: rancher
          port: 80
      # middlewares:
      #   - name: default-headers
  tls:
    secretName: rancher-local-mvd-tls
